--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/AdvancedTopics/FileContentIndex
+/WebApplication1/.vs/WebApplication1
